Search by creation time
Use cases
Nautilus now supports displaying crtime. It doesn't yet support searching by crtime.
Desired behavior
Redesign and extend the search popup to include creation time.
This is how it currently looks:
Benefits of the solution
You can find a file if you know roughly when it was created.
Possible drawbacks
Increased complexity of search popup.