search-engine-recent: Add support for creation time

Currently, build warning is shown about the potential usage of
uninitalized value. This is because creation time is not handled
by the recent search engine. Let's add support for creation time
also for the recent search engine.

Relates: https://gitlab.gnome.org/GNOME/nautilus/-/issues/1761
Relates: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2152